tests/test_data/invalid_semantics/type_checking/nest_function_decl_type_mismatch.c
int main(void)
{
  int foo(void);

  return foo();
}

int foo(int x)
{
  return x + 42;
}
